Added endpoints to work with catalogs.
